--- a/CV/index.css
+++ b/CV/index.css
@@ -26,6 +26,9 @@ html {
   line-height: 26px;
   font-size: 24px;
 }
+a {
+  text-decoration: none;
+}
 p {
   color: var(--black);
   font-size: 18px;
